--- a/CandyStore/en.lproj/ShopListItemCell.xib
+++ b/CandyStore/en.lproj/ShopListItemCell.xib
@@ -103,6 +103,7 @@
 								<int key="NSvFlags">289</int>
 								<string key="NSFrame">{{215, 23}, {65, 21}}</string>
 								<reference key="NSSuperview" ref="170317915"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:311</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -288,7 +289,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">10</int>
+			<int key="maxID">12</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
